# tauri-google-chat

./: PKGBUILD  README.md  package-lock.json  package.json
.agents/: INDEX.md  README.md  context.md  learnings.md  logs.md  memory.md
.agents/agents/: default-agent.md
.archive/: INDEX.md  README.md
.archive/agents/: INDEX.md
.archive/context/: INDEX.md
.archive/learnings/: INDEX.md
.archive/logs/: INDEX.md
.archive/memory/: INDEX.md
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
