[package]
name = "google-chat-desktop"
version = "1.0.3"
description = "A Tauri desktop wrapper for Google Chat"
authors = ["madratzz"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "google_chat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "unstable"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2.7"

